--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
     </header>
     <div class="main-title"></div>
     <section class="main">
-      <div class="left">
+      <div class="half">
         <div class="author"></div>
         <div class="article"></div>
       </div>
-      <div class="right">
+      <div class="half">
         <div class="author"></div>
         <div class="article"></div>
       </div>
     </section>
     <section class="main">
-      <div class="left">
+      <div class="half">
         <div class="author"></div>
         <div class="article"></div>
       </div>
-      <div class="right">
+      <div class="half">
         <div class="author"></div>
         <div class="article"></div>
       </div>
@@ -108,38 +108,38 @@
       </div>
     </section>
     <section class="main">
-      <div class="left">
+      <div class="half">
         <div class="author"></div>
         <div class="article"></div>
       </div>
-      <div class="right">
-        <div class="author"></div>
-        <div class="article"></div>
-      </div>
-    </section>
-    <section class="main">
-      <div class="left">
-        <div class="author"></div>
-        <div class="article"></div>
-      </div>
-      <div class="right">
+      <div class="half">
         <div class="author"></div>
         <div class="article"></div>
       </div>
     </section>
     <section class="main">
-      <div class="left">
+      <div class="half">
         <div class="author"></div>
         <div class="article"></div>
       </div>
-      <div class="right">
+      <div class="half">
+        <div class="author"></div>
+        <div class="article"></div>
+      </div>
+    </section>
+    <section class="main">
+      <div class="half">
+        <div class="author"></div>
+        <div class="article"></div>
+      </div>
+      <div class="half">
         <div class="author"></div>
         <div class="article"></div>
       </div>
     </section>
     <section class="colorBar">
-      <div class="book"></div>
       <div class="colBarText"></div>
+      <div class="book"></div>
     </section>
     <section class="hero">
       <div class="post1">
